# avito-mcp-plugin

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  gemini-extension.json
server/: README.md  pyproject.toml
server/src/avito_mcp_server/: __init__.py  config.py  logging_setup.py  models.py  official_api.py  parser.py  progress.py  server.py  skills_provider.py  timing.py  utils.py
server/src/avito_mcp_server/cookies/: __init__.py  base.py  factory.py  own.py  playwright.py  spfa.py
server/src/avito_mcp_server/export/: __init__.py  exporter.py
server/src/avito_mcp_server/filters/: __init__.py  filters.py
server/src/avito_mcp_server/http/: __init__.py  client.py
server/src/avito_mcp_server/notifications/: __init__.py  sender.py
server/src/avito_mcp_server/parser/: __init__.py  mapping.py  pagination.py  state.py
server/src/avito_mcp_server/proxies/: __init__.py  factory.py  mpsapi.py  proxy.py
server/src/avito_mcp_server/storage/: __init__.py  base.py  models.py  rows.py  supabase.py
server/src/avito_mcp_server/tools/: __init__.py  catalog.py  diagnostics.py  (+8 more)
server/tests/: fakes.py  test_budget_scaling.py  test_config.py  test_cookies.py  test_cookies_spfa_throttle.py  test_export.py  test_filters.py  test_http.py  test_http_backoff_only_rate_limit.py  test_http_backoff_tuning.py  test_http_budget.py  test_http_cookie_refresh.py  test_http_cookieless_retry.py  test_http_instant_rotation.py  test_http_last_attempt.py  test_http_no_wasted_attempts.py  test_http_recovery_ladder.py  test_http_session_reuse.py  test_logging_setup.py  test_models.py  test_notifications.py  test_official_api.py  test_parser.py  test_progress.py  test_proxies.py  test_proxies_chain.py  test_proxies_factory_chain.py  test_server.py  test_skills_provider.py  test_storage_contracts.py  test_storage_supabase.py  test_timing.py  test_tools_diagnostics.py  test_tools_diagnostics_parallel.py  test_tools_execution.py  test_tools_execution_timing.py  test_tools_export.py  test_tools_listings.py  test_tools_monitoring.py  test_tools_notifications.py  (+4 more)
server/tests/fixtures/: catalog.html  firewall_block.html  listing_detail.html  redirect_stub.html  sample_listings.json
(+31 files in other folders)
